--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,7 @@
     "rewrites": [
       {
         "source": "/moreteam",
-        "destination": "/index.html",
-        "permanent": true
+        "destination": "/index.html"
       }
     ]
   }
